# exponax

./: README.md  about_initial_conditions.ipynb  mkdocs.yml  navier_stokes_dynamics.py  pyproject.toml  reaction_diffusion_dynamics.py  special_dynamics.py  understanding_normalized_and_difficulty_nd.py
.github/workflows/: build_docs.yml  deploy_docs.yml  pre_commit.yml  publish.yml  run_tests.yml  test.yml
docs/: conf.py  design_decisions.md  index.md  index.rst  requirements.txt
docs/api/: etdrk_backbone.md
docs/background/: design_decisions.md
docs/examples/: additional_features.ipynb  creating_your_own_solvers_1d.ipynb  edtrk_from_the_ground_up.ipynb  initial_condition_showcase_1d.ipynb  learning_burgers_autoregressive_neural_operator.ipynb  on_metrics_advanced.ipynb  on_metrics_simple.ipynb  performance_hints.ipynb  simple_advection_example_1d.ipynb  solver_showcase_1d.ipynb  solver_showcase_2d.ipynb  solver_showcase_3d.ipynb  understanding_general_and_normalized_stepper.ipynb  understanding_normalized_and_difficulty.py
examples/: additional_features.ipynb  correction_learning__differentiable_physics.ipynb  learning_burgers_autoregressive_neural_operator.ipynb  simple_advection_example_1d.ipynb  solver_showcase_1d.ipynb  solver_showcase_3d.ipynb  understanding_general_and_normalized_stepper.ipynb
exponax/: __init__.py  _base_stepper.py  _exponential_integrators.py  _interpolation.py  _metrics.py  _poisson.py  _repeated_stepper.py  _spectral.py  _stochastic_utils.py  _utils.py  _viz.py  base_stepper.py  exponential_integrators.py  forced_stepper.py  initial_conditions.py  poisson.py  repeated_stepper.py  spectral.py  utils.py
exponax/etdrk/: __init__.py  _base_etdrk.py  _etdrk_1.py  _etdrk_2.py  _etdrk_3.py  _etdrk_4.py
exponax/ic/: __init__.py  _base_ic.py  _clamping.py  _diffused_noise.py  _discontinuities.py  _gaussian_blob.py  _gaussian_random_field.py  _multi_channel.py  _scaled.py  _sine_waves_1d.py  _truncated_fourier_series.py  _white_noise.py  base_ic.py  (+4 more)
tests/: requirements.txt  test_builtin_solvers.py  test_etdrk.py  test_forced_stepper.py  test_ic.py  test_interpolation.py  test_metrics.py  test_mode_slices_generation.py  test_nonlinear_funs.py  test_repeated_stepper.py  test_spectral.py  test_spectral_scaling_arrays.py  test_spectrum.py  test_stepper_generic_utils.py  test_utils.py  test_validation.py  test_viz.py  test_wave.py
validation/: README.md  etdrk_convergence.ipynb  metric_convergence.ipynb  qualitative_rollouts.py  validate_burgers_against_cole_hopf.ipynb  validate_conservative_kuramoto_sivashinsky.ipynb  validate_kdv_against_analytical_soliton.ipynb  validate_kolmogorov_2d_diffusivity.ipynb  validate_kolmogorov_2d_spectrum.ipynb  validate_kolmogorov_spectrum.ipynb  validate_taylor_green.ipynb
(+153 files in other folders)
