[project]
name = "exponax"
version = "0.1.0"
description = "Efficient differentiable PDE solvers in JAX."
readme = "README.md"
requires-python ="~=3.10"
authors = [
  {name = "Felix Koehler"},
]
keywords = ["jax", "sciml", "deep-learning", "pde", "etdrk"]
urls = {repository = "https://github.com/Ceyron/exponax" }
dependencies = ["jax>=0.4.13", "jaxtyping>=0.2.20", "typing_extensions>=4.5.0", "equinox>=0.11.3", "matplotlib>=3.8.1"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "F722",  # jaxtyping uses non-standard annotation syntax
]

[tool.ruff.lint.isort]
known-first-party = ["exponax"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["exponax*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)